Starting Health Bar

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                         <div class="health-bar-blue"></div> -->
                                         <div class="battle-health-bar"></div>
                                     </div>
-                                    100/100
+                                    <span id = "battle-health-bar-value-opponent">100</span>/100
                                 </div>
                             </div>
                             <div class="battle-monster">
@@ -152,7 +152,7 @@
                                 <div class="battle-health-bounding-box">
                                     <div class="battle-health-bar"></div>
                                 </div>
-                                100/100
+                                <span id = "battle-health-bar-value-player">100</span>/100
                             </div>
                         </div>
                     </div>
