Updated login modal title

--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
  
 -->
     <div id="login-menu">
+        <h1 id="login-menu-title">Enter Your Partner's Battle ID and Choose a Pocket Monster!</h1>
         <div id="login-menu-modal">
-            Enter Your Partner's Battle ID and Choose a Pocket Monster!
-            <br>
-            <br>
-            <h1>Your Battle ID: <span id="room-key"></span></h1>
+            <h2>Your Battle ID: <span id="room-key"></span></h2>
             <input type="text" name="" id="receiver-id-input" autocomplete="off">
             <select name="" id="login-monster-choice">
                 <!-- Options load in from monster library -->
@@ -160,39 +158,39 @@
                 <!-- Icons made by Freepik from www.flaticon.com -->
                 <div id="battle-controller-button-wrapper">
                     <button id="battle-move-0" class="battle-controller-button">
-                        <img class="battle-move-symbol" src="/assets/img/symbols/attack.png" alt="">
+                        <img class="battle-move-symbol" src="/assets/img/symbols/0.png" alt="">
                         <div class="battle-move-wrapper">
                             <h5 class="battle-move-name">Move 0</h5>
-                            <h6 class="battle-move-desc">Power: <span id="battle-move0-power"></span></h6>
-                            <h6 class="battle-move-desc">Accuracy: <span id="battle-move0-accuracy"></span></h6>
-                            <h6 class="battle-move-desc">Effect: <span id="battle-move0-effect"></span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move0-power">&nbsp;</span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move0-accuracy">&nbsp;</span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move0-effect">&nbsp;</span></h6>
                         </div>
                     </button>
                     <button id="battle-move-1" class="battle-controller-button">
-                        <img class="battle-move-symbol" src="/assets/img/symbols/attack.png" alt="">
+                        <img class="battle-move-symbol" src="/assets/img/symbols/0.png" alt="">
                         <div class="battle-move-wrapper">
                             <h5 class="battle-move-name">Move 0</h5>
-                            <h6 class="battle-move-desc">Power: <span id="battle-move1-power"></span></h6>
-                            <h6 class="battle-move-desc">Accuracy: <span id="battle-move1-accuracy"></span></h6>
-                            <h6 class="battle-move-desc">Effect: <span id="battle-move1-effect"></span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move1-power">&nbsp;</span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move1-accuracy">&nbsp;</span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move1-effect">&nbsp;</span></h6>
                         </div>
                     </button>
                     <button id="battle-move-2" class="battle-controller-button">
-                        <img class="battle-move-symbol" src="/assets/img/symbols/attack.png" alt="">
+                        <img class="battle-move-symbol" src="/assets/img/symbols/0.png" alt="">
                         <div class="battle-move-wrapper">
                             <h5 class="battle-move-name">Move 0</h5>
-                            <h6 class="battle-move-desc">Power: <span id="battle-move2-power"></span></h6>
-                            <h6 class="battle-move-desc">Accuracy: <span id="battle-move2-accuracy"></span></h6>
-                            <h6 class="battle-move-desc">Effect: <span id="battle-move0-effect"></span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move2-power">&nbsp;</span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move2-accuracy">&nbsp;</span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move0-effect">&nbsp;</span></h6>
                         </div>
                     </button>
                     <button id="battle-move-3" class="battle-controller-button">
-                        <img class="battle-move-symbol" src="/assets/img/symbols/attack.png" alt="">
+                        <img class="battle-move-symbol" src="/assets/img/symbols/0.png" alt="">
                         <div class="battle-move-wrapper">
                             <h5 class="battle-move-name">Move 0</h5>
-                            <h6 class="battle-move-desc">Power: <span id="battle-move3-power"></span></h6>
-                            <h6 class="battle-move-desc">Accuracy: <span id="battle-move3-accuracy"></span></h6>
-                            <h6 class="battle-move-desc">Effect: <span id="battle-move3-effect"></span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move3-power">&nbsp;</span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move3-accuracy">&nbsp;</span></h6>
+                            <h6 class="battle-move-desc"><span id="battle-move3-effect">&nbsp;</span></h6>
                         </div>
                     </button>
                 </div>
