Added names to health bars

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="battle-scence-column battle-scence-column-players">
                             <div class="battle-health-bar-wrapper">
                                 <div class="battle-health-bar-beam" id="battle-health-bar-beam-opponent">
-                                    <h3>Health Bar</h3>
+                                    <h3 id="battle-monster-name-opponent">Health Bar</h3>
                                     <div class="battle-health-bounding-box">
                                         <!-- Currently unused -->
                                         <!-- <div class="health-bar-red"></div>
@@ -151,7 +151,7 @@
                             </div>
                             <div class="battle-health-bar-wrapper">
                                 <div class="battle-health-bar-beam" id="battle-health-bar-beam-player">
-                                    <h3>Health Bar</h3>
+                                    <h3 id="battle-monster-name-player">Health Bar</h3>
                                     <div class="battle-health-bounding-box">
                                         <div class="battle-health-bar-player"></div>
                                     </div>
