Creating page load animation

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
         </div>
     </div>
 
+    <div id="red-login-panel">
+        <div id="login-ball-wrap">
+            <div id="login-ball"></div>
+        </div>
+    </div>
+    <div id="white-login-panel">
+    </div>
+
+
     <div id="poke-container">
 
         <!--
